[package]
name = "chat_serv"
version = "0.1.0"
authors = ["Jared Stromberg <jstromberg@astraspace.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
futures = "0.1.25"
tokio = "0.1.15"

serde = "1.0.89"
serde_json = "1.0.38"
serde_derive = "1.0.89"
